Bug no z-index do menu consertado

--- a/public/css/etiam_nav.css
+++ b/public/css/etiam_nav.css
@@ -24,6 +24,7 @@
 
 .nav_wrapper {
   position: fixed;
+  z-index: 9999;
 }
 a.nav_hamburger {
   text-decoration: none;
